[gd_scene load_steps=9 format=3 uid="uid://da81j1yv7pxew"]

[ext_resource type="Script" path="res://scenes/cards/scripts/base_card.gd" id="1_f82t3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0r76j"]
size = Vector2(667, 942)

[sub_resource type="LabelSettings" id="LabelSettings_lvmg8"]
font_size = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y0oud"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xfhb5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d40ml"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_igkde"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k13i3"]

[node name="BaseCard" type="Node2D"]
scale = Vector2(0.35, 0.35)
script = ExtResource("1_f82t3")

[node name="Area2D" type="Area2D" parent="."]

[node name="Image" type="Sprite2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_0r76j")

[node name="Border" type="Sprite2D" parent="Area2D"]
scale = Vector2(1.04, 1.04)

[node name="Sound" type="Node" parent="."]

[node name="SoundPlayer" type="AudioStreamPlayer" parent="Sound"]

[node name="Cost" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_lvmg8")

[node name="Button" type="Button" parent="."]
offset_left = -329.0
offset_top = -471.0
offset_right = 331.0
offset_bottom = 466.0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_y0oud")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xfhb5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d40ml")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_igkde")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k13i3")
action_mode = 0
flat = true

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
